--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
             <span class="hidden">Trafaglar</span>
             <a href="/">
               <img
-                src="./logojon.svg"
+                src="././img/logojon.svg"
                 width="160"
                 height="41"
                 alt="Trafaglar logo"
@@ -64,7 +64,7 @@
             </div>
             <div class="hero-section_image">
               <img
-                src="./trafalgar-header illustration 1.png"
+                src="././img/trafalgar-header illustration 1.png"
                 alt="hero img"
               />
             </div>
@@ -85,7 +85,7 @@
           </div>
           <ul id="our-services" class="our-services-list">
             <li>
-              <img src="./lupa.svg" alt=" Bu yerda lupa bor" />
+              <img src="././img/lupa.svg" alt=" Bu yerda lupa bor" />
               <h3>Online pharmacy</h3>
               <p>
                 Buy your medicines with our mobile application with a simple
@@ -93,7 +93,7 @@
               </p>
             </li>
             <li>
-              <img src="./online phatmacy.svg" alt="online phatmacy" />
+              <img src="././img/online phatmacy.svg" alt="online phatmacy" />
               <h3>Online pharmacy</h3>
               <p>
                 Buy your medicines with our mobile application with a simple
@@ -101,7 +101,7 @@
               </p>
             </li>
             <li>
-              <img src="./consultation.svg" alt="consultation" />
+              <img src="././img/consultation.svg" alt="consultation" />
               <h3>Consultation</h3>
               <p>
                 Free consultation with our trusted doctors and get the best
@@ -109,7 +109,7 @@
               </p>
             </li>
             <li>
-              <img src="./details info.svg" alt="details info" />
+              <img src="././img/details info.svg" alt="details info" />
               <h3>Details info</h3>
               <p>
                 Free consultation with our trusted doctors and get the best
@@ -117,7 +117,7 @@
               </p>
             </li>
             <li>
-              <img src="./emergeny care.svg" alt="emergeny care" />
+              <img src="././img/emergeny care.svg" alt="emergeny care" />
               <h3>Emergency care</h3>
               <p>
                 You can get 24/7 urgent care for yourself or your children and
@@ -125,7 +125,7 @@
               </p>
             </li>
             <li>
-              <img src="./tracking.svg" alt="tracking" />
+              <img src="././img/tracking.svg" alt="tracking" />
               <h3>Tracking</h3>
               <p>Track and save your medical history and health data</p>
             </li>
@@ -139,7 +139,7 @@
         <div class="container">
           <div class="leading-section">
             <div class="leading-img">
-              <img src="./1.svg" alt="leading img" />
+              <img src="././img/1.svg" alt="leading img" />
             </div>
             <div class="leading-text">
               <h2 class="leading-header">Leading healthcare providers</h2>
@@ -164,7 +164,7 @@
               <a href="#" class="btn btn-secondory">Download</a>
             </div>
             <div class="download-img">
-              <img src="./2.svg" alt="download img" />
+              <img src="././img/2.svg" alt="download img" />
             </div>
           </div>
         </div>
@@ -177,7 +177,7 @@
             <div class="creadors-about">
               <div class="about-creadors">
                 <img
-                  src="./creadors-1.svg"
+                  src="././img/creadors-1.svg"
                   class="creadors-img"
                   alt="creadors"
                 />
@@ -193,7 +193,7 @@
                   calls, or administrative hassle) and securely”
                 </p>
                 <br>
-                <img src="./arrow nav (1).pngs" alt="bu yerda strilka bor idi chiqmay qolsa uzur">
+                <img src="././img/arrow nav (1).png" alt="bu yerda strilka bor idi chiqmay qolsa uzur">
               </div>
             </div>
           </div>
@@ -205,31 +205,31 @@
           <hr class="banner-line" />
           <div class="banner-news">
             <div class="banner-fist">
-              <img src="./banner-1.png" alt="banner-1" />
+              <img src="././img/banner-1.png" alt="banner-1" />
               <h3>Disease detection, check up in the laboratory</h3>
               <p>
                 In this case, the role of the health laboratory is very
                 important to do a disease detection...
               </p>
-              <a href="#">Read more</a>  <img src="./Frame.svg" alt="bu yerda strilka bor bolacha">
+              <a href="#">Read more</a>  <img src="././img/Frame.svg" alt="bu yerda strilka bor bolacha">
             </div>
             <div class="banner-second">
-              <img src="./banner-2.png" alt="banner-2" />
+              <img src="././img/banner-2.png" alt="banner-2" />
               <h3>Herbal medicines that are safe for consumption</h3>
               <p>
                 Herbal medicine is very widely used at this time because of its
                 very good for your health...
               </p>
-              <a href="#">Read more</a>  <img src="./Frame.svg" alt="bu yerda strilka bor bolacha">
+              <a href="#">Read more</a>  <img src="././img/Frame.svg" alt="bu yerda strilka bor bolacha">
             </div>
             <div class="banner-last">
-              <img src="./banner-3.png" alt="banner-3" />
+              <img src="././img/banner-3.png" alt="banner-3" />
               <h3>Natural care for healthy facial skin</h3>
               <p>
                 A healthy lifestyle should start from now and also for your skin
                 health. There are some...
               </p>
-              <a href="#">Read more</a>   <img src="./Frame.svg" alt="bu yerda strilka bor bolacha">
+              <a href="#">Read more</a>   <img src="./img/Frame.svg" alt="bu yerda strilka bor bolacha">
             </div>
           </div>
           <div class="banner-btn-wrapper">
